--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Expense Tracker Full Stack (MERN)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/GLADI8R/Expense-Tracker/issues"
   },
-  "homepage": "https://github.com/GLADI8R/Expense-Tracker#readme"
+  "homepage": "https://github.com/GLADI8R/Expense-Tracker#readme",
+  "dependencies": {
+    "concurrently": "^6.2.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.7",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.12"
+  }
 }
